    suggested by Jan Wielemaker and found on SWI-Prolog 5.11.25. This mode
    specifier is useful when defining wrappers for the bagof/3 and setof/3
    built-in methods whenever the goal argument may use the ^/2 existential
    quantifier.

    Added "prolog_compiler" and "prolog_loader" compiler flags, which allow
    passing options to the back-end Prolog compiler built-in predicates that
    compile to disk and load a (compiled) Prolog flag. The default value for
    both flags is the empty list.

    Corrected a bug when compiling calls to Prolog proprietary built-in meta-
    predicates where the Logtalk compiler could attempt to process non meta-
    arguments as goals. This bug only manifested itself with some back-end
    Prolog compilers such as ECLiPSe.

    Corrected a bug in the processing of conditional compilation directives.

    Corrected a bug that prevented passing alias/3 directives on calls to
    the create_object/4, create_category/4, and create_protocol/3 built-in
    predicates.

    Removed from the built-in object "logtalk" the decompile_predicate_head/4
    and decompile_predicate_indicator/4 deprecated methods.

    Removed support for the long deprecated Logtalk metapredicate/1 directive.

    Corrected a performance bug when caching calls to category predicates where
    the cached entries could be more specific than necessary when working with
    parametric categories.

    Improved caching of "super" calls from within prototypes. Previously, all
    cached entries would be specialized by the value of "self" in order to
    properly deal with the special cases where an object both instantiates and
    specializes other objects.

    Updated the Logtalk compiler to activate any operator declarations found
    on predicate scope directives during the compilation of the entities that
    contain the directives.

    Improved the performance of coinductive predicates when using back-end