@@ -19052,8 +19052,8 @@ current_logtalk_flag(version, version(2, 43, 1)).
 	'$lgt_compiler_flag'(smart_compilation, Smart), write(', smart_compilation: '), write(Smart),
 	'$lgt_compiler_flag'(reload, Reload), write(', reload: '), write(Reload), nl,
 	write('Back-end Prolog compiler and loader flags:'), nl,
-	'$lgt_compiler_flag'(prolog_compiler, PrologCompiler), write('  prolog_compiler: '), write(PrologCompiler),
-	'$lgt_compiler_flag'(prolog_loader, PrologLoader), write(', prolog_loader: '), write(PrologLoader), nl,
+	'$lgt_compiler_flag'(prolog_compiler, PrologCompiler), write('  prolog_compiler: '), write(PrologCompiler), nl,
+	'$lgt_compiler_flag'(prolog_loader, PrologLoader), write('  prolog_loader:   '), write(PrologLoader), nl,
 	write('Read-only compilation flags (back-end Prolog compiler features):'), nl,
 	'$lgt_compiler_flag'(prolog_dialect, PrologDialect), write('  prolog_dialect: '), write(PrologDialect),
 	'$lgt_compiler_flag'(break_predicate, Break), write(', break_predicate: '), write(Break),
