@@ -44,8 +44,10 @@ RELEASE NOTES
 
     Added "prolog_compiler" and "prolog_loader" compiler flags, which allow
     passing options to the back-end Prolog compiler built-in predicates that
-    compile to disk and load a (compiled) Prolog flag. The default value for
-    both flags is the empty list.
+    compile to disk and load a (compiled) Prolog flag. Updated the ECLiPSe,
+    Qu-Prolog, SICStus Prolog, and XSB config files to take advantage of these
+    new flags. For the other supported back-end Prolog compilers, the default
+    value for both flags is the empty list.
 
     Corrected a bug when compiling calls to Prolog proprietary built-in meta-
     predicates where the Logtalk compiler could attempt to process non meta-
